# ble-ggk-linux

./: .gitignore  CMakeLists.txt  README.md  aclocal.m4  ble-ggk-linux.conf  config.h.in  configure  libble-ggk-linux.pc.in  options.cmake  options.json
include/: Gobbledegook.h
src/: GattCharacteristic.cpp  GattCharacteristic.h  Gobbledegook.cpp  Init.cpp  Mgmt.cpp  Mgmt.h  Server.cpp  Server.h  Utils.cpp  Utils.h  standalone.cpp
